--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>yes1.</p>
+                <p>yes.</p>
             </div>
             <div class="col-sm-4">
-                <p>yes2.</p>
+                <p>yes.</p>
             </div>
             <div class="col-sm-4">
-                <p>yes3.</p>
+                <p>yes.</p>
             </div>
         </div>
     </div>
