--- a/projects/example-project.html
+++ b/projects/example-project.html
@@ -43,12 +43,12 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
+            <h1 class="margin text-center">Github Tutorial Project</h1>
+            <p>The purpose of this project was to share what we learned in class about Github with those who are new to it.</p>
+            <p>This is just a basic tutorial.</p>
             <a href="#">Link about the project</a><br>
 
-            <!--EXAMPLE OF PREVIEW LINK-->
+            <!-- OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a>-->
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a>-->
