--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>yes.</p>
+                <p>SEP STUDENT</p>
             </div>
             <div class="col-sm-4">
-                <p>yes.</p>
+                <p>FUN</p>
             </div>
             <div class="col-sm-4">
-                <p>yes.</p>
+                <p>HARD WORKING</p>
             </div>
         </div>
     </div>
