--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
                         </div>
                     </div>
                 </div>
-              
+               <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">SHABR Project</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
+                            <p class="card-text">We made a website with the content we were given. This was to help you demonstrate and practice what we learned from boostrap. </p>
+                            <a href="projects/portfolioshabr.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
