--- a/projects/portfolioshabr.html
+++ b/projects/portfolioshabr.html
@@ -53,7 +53,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a>-->
 
-            <img src="../img/googlecopycat.PNG>" class="img-fluid project-img">
+            <img src=class="img-fluid project-img">
 
 
             <div class="row">
