--- a/projects/portfolioshabr.html
+++ b/projects/portfolioshabr.html
@@ -47,7 +47,7 @@
            
             <p>We made a website with the content we were given. This was to help you demonstrate and practice what we learned from boostrap.</p>
             <a href="https://github.com/kelvinw8872/shabr">Link about the project</a><br>
-
+                <a href="https://kelvinw8872.github.io/shabr/">Link to the project</a><br> 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a>-->
             <!--EXAMPLE OF GITHUB LINK-->
